src/parser/Parser.java
/* Parser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Parser.java */
package parser;

public class Parser/*@bgen(jjtree)*/implements ParserTreeConstants, ParserConstants {/*@bgen(jjtree)*/
  protected static JJTParserState jjtree = new JJTParserState();public static SimpleNode parse(String[] args) {
        //Parser initialization
        parser.Parser parser;

        if (args.length != 1){
            System.out.println ("Usage: java Parser <file_directory>");
            return null;
        }
        else {
            System.out.println("Parser: Reading file " + args[0] + " ..." );
            try {
                parser = new parser.Parser(new java.io.FileInputStream(args[0]));
            }
            catch(java.io.FileNotFoundException e) {
                System.out.println ("Parser: File " + args[0] + " not found.");
                return null;
            }
        }

        try {
            SimpleNode root = parser.Program();
            System.out.println ("Parser: File parsed successfully.");

            return root;
        }
        catch(TokenMgrError e){
            System.out.println ("Parser: Token error.");
            System.out.println (e.getMessage());
        }
        catch(ParseException e){
            System.out.println ("Parser: Parsing error.");
            System.out.println (e.getMessage());
        }

        return null;
    }

// Definition of Terminal Leafs
  static final public void Id() throws ParseException {/*@bgen(jjtree) ID */
                SimpleNode jjtn000 = new SimpleNode(JJTID);
                boolean jjtc000 = true;
                jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
jjtn000.value = t.image;
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Integer() throws ParseException {/*@bgen(jjtree) INTEGER */
                          SimpleNode jjtn000 = new SimpleNode(JJTINTEGER);
                          boolean jjtc000 = true;
                          jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(INTEGER_LITERAL);
jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
jjtn000.value = t.image;
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case INTARRAY:
    case BOOLEAN:{
      TypeNoId();
      break;
      }
    case IDENTIFIER:{
      TypeId();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void TypeNoId() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTARRAY:{
SimpleNode jjtn001 = new SimpleNode(JJTINTARRAY);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(INTARRAY);
      } finally {
if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
      }
      }
      break;
      }
    case INT:{
SimpleNode jjtn002 = new SimpleNode(JJTINT);
                            boolean jjtc002 = true;
                            jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(INT);
      } finally {
if (jjtc002) {
                              jjtree.closeNodeScope(jjtn002, true);
                            }
      }
      break;
      }
    case BOOLEAN:{
SimpleNode jjtn003 = new SimpleNode(JJTBOOLEAN);
                                        boolean jjtc003 = true;
                                        jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(BOOLEAN);
      } finally {
if (jjtc003) {
                                          jjtree.closeNodeScope(jjtn003, true);
                                        }
      }
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void TypeId() throws ParseException {/*@bgen(jjtree) ID */
                    SimpleNode jjtn000 = new SimpleNode(JJTID);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
jjtn000.value = t.image;
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// Grammar Definition
  static final public SimpleNode Program() throws ParseException {/*@bgen(jjtree) PROGRAM */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ClassDeclaration();
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
                               jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void ClassDeclaration() throws ParseException {/*@bgen(jjtree) CLASS */
  SimpleNode jjtn000 = new SimpleNode(JJTCLASS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CLASS);
      Id();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EXTENDS:{
        jj_consume_token(EXTENDS);
        Id();
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      jj_consume_token(OPEN_BRACES);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case INTARRAY:
        case BOOLEAN:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          break label_1;
        }
        VarDeclaration();
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PUBLIC:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_2;
        }
        MethodDeclaration();
      }
      jj_consume_token(CLOSE_BRACES);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void VarDeclaration() throws ParseException {/*@bgen(jjtree) VAR */
  SimpleNode jjtn000 = new SimpleNode(JJTVAR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Type();
      Id();
      jj_consume_token(SEMI_COLON);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void MethodDeclaration() throws ParseException {
    jj_consume_token(PUBLIC);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case INTARRAY:
    case BOOLEAN:
    case IDENTIFIER:{
SimpleNode jjtn001 = new SimpleNode(JJTMETHOD);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
      try {
        Type();
        Id();
        jj_consume_token(OPEN_PAREN);
        Params();
        jj_consume_token(CLOSE_PAREN);
        jj_consume_token(OPEN_BRACES);
        Body();
        jj_consume_token(CLOSE_BRACES);
      } catch (Throwable jjte001) {
if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
          }
      }
      break;
      }
    case STATIC:{
SimpleNode jjtn003 = new SimpleNode(JJTMAIN);
            boolean jjtc003 = true;
            jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(STATIC);
        jj_consume_token(VOID);
        jj_consume_token(MAIN);
        jj_consume_token(OPEN_PAREN);
        jj_consume_token(STRINGARRAY);
        Id();
        jj_consume_token(CLOSE_PAREN);
        jj_consume_token(OPEN_BRACES);
SimpleNode jjtn002 = new SimpleNode(JJTBODY);
                                                                                                boolean jjtc002 = true;
                                                                                                jjtree.openNodeScope(jjtn002);
        try {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case OPEN_PAREN:
          case INT:
          case INTARRAY:
          case NOT:
          case NEW:
          case THIS:
          case TRUE:
          case FALSE:
          case BOOLEAN:
          case WHILE:
          case IF:
          case OPEN_BRACES:
          case INTEGER_LITERAL:
          case IDENTIFIER:{
            MethodBody();
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            ;
          }
        } catch (Throwable jjte002) {
if (jjtc002) {
                                                                                                  jjtree.clearNodeScope(jjtn002);
                                                                                                  jjtc002 = false;
                                                                                                } else {
                                                                                                  jjtree.popNode();
                                                                                                }
                                                                                                if (jjte002 instanceof RuntimeException) {
                                                                                                  {if (true) throw (RuntimeException)jjte002;}
                                                                                                }
                                                                                                if (jjte002 instanceof ParseException) {
                                                                                                  {if (true) throw (ParseException)jjte002;}
                                                                                                }
                                                                                                {if (true) throw (Error)jjte002;}
        } finally {
if (jjtc002) {
                                                                                                  jjtree.closeNodeScope(jjtn002, true);
                                                                                                }
        }
        jj_consume_token(CLOSE_BRACES);
      } catch (Throwable jjte003) {
if (jjtc003) {
              jjtree.clearNodeScope(jjtn003);
              jjtc003 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte003 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte003;}
            }
            if (jjte003 instanceof ParseException) {
              {if (true) throw (ParseException)jjte003;}
            }
            {if (true) throw (Error)jjte003;}
      } finally {
if (jjtc003) {
              jjtree.closeNodeScope(jjtn003, true);
            }
      }
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Params() throws ParseException {/*@bgen(jjtree) PARAMETERS */
  SimpleNode jjtn000 = new SimpleNode(JJTPARAMETERS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case INTARRAY:
      case BOOLEAN:
      case IDENTIFIER:{
        Type();
        Id();
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[7] = jj_gen;
            break label_3;
          }
          jj_consume_token(COMMA);
          Type();
          Id();
        }
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Body() throws ParseException {/*@bgen(jjtree) BODY */
  SimpleNode jjtn000 = new SimpleNode(JJTBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OPEN_PAREN:
      case INT:
      case INTARRAY:
      case NOT:
      case NEW:
      case THIS:
      case TRUE:
      case FALSE:
      case BOOLEAN:
      case WHILE:
      case IF:
      case OPEN_BRACES:
      case INTEGER_LITERAL:
      case IDENTIFIER:{
        MethodBody();
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      Return();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Return() throws ParseException {/*@bgen(jjtree) RETURN */
  SimpleNode jjtn000 = new SimpleNode(JJTRETURN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
      FullExpression();
      jj_consume_token(SEMI_COLON);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void MethodBody() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case INTARRAY:
    case BOOLEAN:{
      VarDeclarationNoId();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OPEN_PAREN:
      case INT:
      case INTARRAY:
      case NOT:
      case NEW:
      case THIS:
      case TRUE:
      case FALSE:
      case BOOLEAN:
      case WHILE:
      case IF:
      case OPEN_BRACES:
      case INTEGER_LITERAL:
      case IDENTIFIER:{
        MethodBody();
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      break;
      }
    case IDENTIFIER:{
      Id();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
SimpleNode jjtn001 = new SimpleNode(JJTVAR);
              boolean jjtc001 = true;
              jjtree.openNodeScope(jjtn001);
        try {
          Id();
        } catch (Throwable jjte001) {
if (jjtc001) {
                jjtree.clearNodeScope(jjtn001);
                jjtc001 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte001 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte001;}
              }
              if (jjte001 instanceof ParseException) {
                {if (true) throw (ParseException)jjte001;}
              }
              {if (true) throw (Error)jjte001;}
        } finally {
if (jjtc001) {
                jjtree.closeNodeScope(jjtn001,  2);
              }
        }
        jj_consume_token(SEMI_COLON);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case OPEN_PAREN:
        case INT:
        case INTARRAY:
        case NOT:
        case NEW:
        case THIS:
        case TRUE:
        case FALSE:
        case BOOLEAN:
        case WHILE:
        case IF:
        case OPEN_BRACES:
        case INTEGER_LITERAL:
        case IDENTIFIER:{
          MethodBody();
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          ;
        }
        break;
        }
      case AND:
      case LOWER:
      case PLUS:
      case MINUS:
      case DOT:
      case OPEN_BRACK:
      case ASSIGN:
      case SEMI_COLON:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case AND:
        case LOWER:
        case PLUS:
        case MINUS:
        case DOT:
        case OPEN_BRACK:
        case ASSIGN:{
          IdStatement();
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          ;
        }
        jj_consume_token(SEMI_COLON);
        Statements();
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    case OPEN_PAREN:
    case NOT:
    case NEW:
    case THIS:
    case TRUE:
    case FALSE:
    case WHILE:
    case IF:
    case OPEN_BRACES:
    case INTEGER_LITERAL:{
      NoIdStatement();
      Statements();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void VarDeclarationNoId() throws ParseException {/*@bgen(jjtree) VAR */
  SimpleNode jjtn000 = new SimpleNode(JJTVAR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      TypeNoId();
      Id();
      jj_consume_token(SEMI_COLON);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Statements() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OPEN_PAREN:
    case NOT:
    case NEW:
    case THIS:
    case TRUE:
    case FALSE:
    case WHILE:
    case IF:
    case OPEN_BRACES:
    case INTEGER_LITERAL:
    case IDENTIFIER:{
      Statement();
      Statements();
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OPEN_PAREN:
    case NOT:
    case NEW:
    case THIS:
    case TRUE:
    case FALSE:
    case WHILE:
    case IF:
    case OPEN_BRACES:
    case INTEGER_LITERAL:{
      NoIdStatement();
      break;
      }
    case IDENTIFIER:{
      Id();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:
      case LOWER:
      case PLUS:
      case MINUS:
      case DOT:
      case OPEN_BRACK:
      case ASSIGN:{
        IdStatement();
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      jj_consume_token(SEMI_COLON);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void IdStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case AND:
    case LOWER:
    case PLUS:
    case MINUS:
    case DOT:{
      FullExpressionNoBrack();
      break;
      }
    case OPEN_BRACK:{
      jj_consume_token(OPEN_BRACK);
SimpleNode jjtn001 = new SimpleNode(JJTINDEX);
                     boolean jjtc001 = true;
                     jjtree.openNodeScope(jjtn001);
      try {
        FullExpression();
      } catch (Throwable jjte001) {
if (jjtc001) {
                       jjtree.clearNodeScope(jjtn001);
                       jjtc001 = false;
                     } else {
                       jjtree.popNode();
                     }
                     if (jjte001 instanceof RuntimeException) {
                       {if (true) throw (RuntimeException)jjte001;}
                     }
                     if (jjte001 instanceof ParseException) {
                       {if (true) throw (ParseException)jjte001;}
                     }
                     {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                       jjtree.closeNodeScope(jjtn001,  2);
                     }
      }
      jj_consume_token(CLOSE_BRACK);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DOT:
      case OPEN_BRACK:
      case ASSIGN:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ASSIGN:{
          jj_consume_token(ASSIGN);
SimpleNode jjtn002 = new SimpleNode(JJTASSIGN);
                                                                         boolean jjtc002 = true;
                                                                         jjtree.openNodeScope(jjtn002);
          try {
            FullExpression();
          } catch (Throwable jjte002) {
if (jjtc002) {
                                                                           jjtree.clearNodeScope(jjtn002);
                                                                           jjtc002 = false;
                                                                         } else {
                                                                           jjtree.popNode();
                                                                         }
                                                                         if (jjte002 instanceof RuntimeException) {
                                                                           {if (true) throw (RuntimeException)jjte002;}
                                                                         }
                                                                         if (jjte002 instanceof ParseException) {
                                                                           {if (true) throw (ParseException)jjte002;}
                                                                         }
                                                                         {if (true) throw (Error)jjte002;}
          } finally {
if (jjtc002) {
                                                                           jjtree.closeNodeScope(jjtn002,  2);
                                                                         }
          }
          break;
          }
        case DOT:
        case OPEN_BRACK:{
          FullExpressionNoFactor();
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      break;
      }
    case ASSIGN:{
      jj_consume_token(ASSIGN);
SimpleNode jjtn003 = new SimpleNode(JJTASSIGN);
                 boolean jjtc003 = true;
                 jjtree.openNodeScope(jjtn003);
      try {
        FullExpression();
      } catch (Throwable jjte003) {
if (jjtc003) {
                   jjtree.clearNodeScope(jjtn003);
                   jjtc003 = false;
                 } else {
                   jjtree.popNode();
                 }
                 if (jjte003 instanceof RuntimeException) {
                   {if (true) throw (RuntimeException)jjte003;}
                 }
                 if (jjte003 instanceof ParseException) {
                   {if (true) throw (ParseException)jjte003;}
                 }
                 {if (true) throw (Error)jjte003;}
      } finally {
if (jjtc003) {
                   jjtree.closeNodeScope(jjtn003,  2);
                 }
      }
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
